fix docs/locales code escaping and css overflow

--- a/website/themes/uppy/source/css/_page.scss
+++ b/website/themes/uppy/source/css/_page.scss
@@ -360,6 +360,9 @@
 .page-docs-locales table {
   overflow: visible;
 }
+.page-docs-locales .highlight table {
+  overflow: scroll;
+}
 .page-docs-locales table td {
   white-space: nowrap;
   font-size: 90%;
